fix layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,6 @@ header{
 
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin: 6.25rem 2.5rem 0 2.5rem;
 }
 
